--- a/src/components/processNonGPS.css
+++ b/src/components/processNonGPS.css
@@ -17,7 +17,7 @@
     border-radius: 8px;
     padding: 0px 2px;
     width: 300px;
-    height: 500px;
+    height: 450px;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
     display: flex;
     flex-direction: column;
@@ -49,7 +49,7 @@
     gap: 5px;
 }
 
-.ass-loc--image-container {
+.ass-loc--media-container {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -67,7 +67,7 @@
     max-width: 100%;
     max-height: 200px;
     object-fit: contain; /* Keeps the video within its container */
-    border-radius: 8px; /* Adds some radius to the video */4
+    border-radius: 8px; /* Adds some radius to the video */
 }
 
 /* Ensure the video viewer matches the image viewer height */
