--- a/src/components/mapPopup.css
+++ b/src/components/mapPopup.css
@@ -155,6 +155,28 @@
         }
 }
 
+
+
+.exit-fullscreen-button {
+  position: fixed; /* Ensure the button stays in the viewport */
+  top: 10px; /* Adjust positioning for better visibility */
+  right: 10px; /* Place it in the top-right corner */
+  z-index: 10000; /* Ensure it's above all other elements */
+  background-color: rgba(0, 0, 0, 0.8);
+  color: white;
+  border: none;
+  border-radius: 4px;
+  padding: 8px 16px;
+  font-size: 14px;
+  cursor: pointer;
+}
+
+.exit-fullscreen-button:hover {
+  background-color: rgba(255, 255, 255, 0.8);
+  color: black;
+}
+
+
 /** IMAGE STYLING - ABOVE **/
 
 .comments--editor-control-div {
@@ -263,3 +285,5 @@
   background-color: #b0b0b0;
   cursor: not-allowed;
 }
+
+
