--- a/src/components/mapPopup.css
+++ b/src/components/mapPopup.css
@@ -72,7 +72,7 @@
 /** IMAGE STYLING - BELOW **/
 
 .image-gallery-image {
-  border: 1px solid red ;
+  border: 1px solid blue;
   display: flex;
   justify-content: center;
   align-items: center;
