--- a/src/components/navigation.css
+++ b/src/components/navigation.css
@@ -152,7 +152,7 @@
     background-color: white;
     border-radius: 8px;
     padding: 20px;
-    width: 600px;
+    width: 800px;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
   }
   
@@ -165,6 +165,7 @@
   .modal--title {
     padding: 0;
     margin: 10px auto 10px auto;
+    font-weight: bold;
   }
    
   .modal--close-button {
@@ -184,14 +185,9 @@
   .modal--label {
     font-size: 14px;
     padding: 0;
-    margin: 20px 0 0 0;
+    margin: 5px 0 0 0;
   }
 
-  .modal--footer {
-    display: flex;
-    justify-content: center;
-    gap: 10px; 
-  }
   
   .modal--button {
     padding: 10px;
@@ -203,11 +199,6 @@
     text-align: center;
     width: 150px;
   }
-  
-  .modal--button:hover {
-    background-color: var(--SYellow);
-    color: var(--sDarkBlue);
-  }
 
   .modal--textarea {
     width: 100%;
@@ -216,17 +207,61 @@
     border: 1px solid var(--SYellow);
     border-radius: 4px;
     resize: none;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
   }
   
   .modal--footer {
     display: flex;
-    justify-content: center;
-    gap: 10px; /* Space between the Search and Save buttons */
+    flex-direction: column; /* Arrange items in a column */
+    gap: 10px; /* Space between the buttons */
+    align-items: center; /* Center the buttons horizontally */
+    border-top: 40px;
+  }
+  
+  .modal--button-div-parallel {
+    display: flex;
+    justify-content: space-evenly;
+    gap: 10px; /* Space between the buttons */
+    align-items: center; /* Center the buttons horizontally */
+    border-top: 40px;
+  }
+
+  .modal--message {
+    margin: 0 0 20px 0;
+    padding: 0;
   }
   
 
 
+/* user login  */
+
+
+.model--login-text {
+  line-height: 1.5;
+  margin-top: 10px;
+}
+
+.modal--bold {
+  font-weight: bold;
+}
+
+.modal--white-button {
+  padding: 10px;
+  background-color: white;
+  border: 1px solid grey;
+  color: var(--sDarkBlue);
+  border-radius: 5px;
+  cursor: pointer;
+  text-align: center;
+  width: 250px;
+  margin: 10px auto;
+
+}
+
+.modal--white-button:hover {
+  background-color: var(--SYellow);
+  color: var(--sDarkBlue);
+}
 
 
 
@@ -275,3 +310,56 @@
   cursor: pointer;
 }
   
+
+
+
+/* Grid container */
+ /* Grid container */
+.config--body {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 20px;
+  margin-bottom: 20px;
+}
+
+.config--container {
+  padding: 20px;
+  border-radius: 8px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.config--red-container {
+  border: 2px solid red;
+}
+
+.config--green-container {
+  border: 2px solid green;
+}
+
+.config--button-container {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 20px;
+}
+
+.config--textarea,
+.config--input {
+  width: 100%;
+  padding: 8px;
+  font-size: 14px;
+  border: 1px solid var(--SYellow);
+  border-radius: 4px;
+}
+
+@media (max-width: 768px) {
+  .config--body {
+    grid-template-columns: 1fr;
+  }
+
+  .config--button-container {
+    flex-direction: row;
+    justify-content: space-between;
+  }
+}
