--- a/src/components/manageNonGPSPictures.css
+++ b/src/components/manageNonGPSPictures.css
@@ -1,5 +1,6 @@
-/* styles for AssignLocation window */
-.ass-loc--overlay {
+/* Non-GPS Upload Screen  */
+
+.non-gps--overlay {
     position: fixed;
     top: 0;
     left: 0;
@@ -10,20 +11,20 @@
     justify-content: center;
     align-items: center;
     z-index: 1000;
-}
-
-.ass-loc--content {
-    background-color: gray;
+  }
+  
+.non-gps--content {
+    background-color: white;
     border-radius: 8px;
     padding: 0px 2px;
-    width: 300px;
-    height: 450px;
+    width: 400px;
+    height: 480px;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
     display: flex;
     flex-direction: column;
 }
 
-.ass-loc--header {
+.non-gps--header {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -31,44 +32,84 @@
     height: 40px;
 }
 
-.ass-loc--title {
-    font-size: 18px;
+.non-gps--title {
+    font-size: 16px;
     font-weight: bold;
+    margin: 5px auto;
 }
 
-.ass-loc-close-button {
-    background-color: transparent;
+.non-gps--close-button {
+    background: none;
     border: none;
-    font-size: 18px;
-    cursor: pointer;
+    margin-right: 10px;
+    font-size: 20px;
 }
 
-.ass-loc--body {
+.non-gps--button {
+    background: none;
+    border: none;
+    font-size: 20px;
+    font-weight: bold;
+    color: black;
+    cursor: pointer;
+    width: 50px;
+}
+
+.non-gps--body {
     display: flex;
     flex-direction: column;
     gap: 5px;
+    border: 1px solid red;
+    margin: 6px;
+    height: 100%;
 }
 
-.ass-loc--media-container {
+.non-gps--button {
+    padding: 8px;
+    background-color: var(--sDarkBlue);
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    text-align: center;
+    width: 160px;
+    font-weight: normal;
+    font-size: 16px;
+    margin: 0 auto 10px auto;
+}
+
+.non-gps--label {
+    margin: 2px 5px;
+}
+
+
+.non-gps--media-container {
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-grow: 1;
-    max-height: 50%; /* Image container height */
+    height: 225px;
+    width: auto;
 }
 
-.ass-loc--image {
+.non-gps--image {
     max-width: 100%;
     max-height: 100%;
-    object-fit: contain; /* Ensures the aspect ratio is maintained */
+    object-fit: contain;
 }
 
-.ass-loc--video {
+.non-gps--video {
     max-width: 100%;
     max-height: 200px;
-    object-fit: contain; /* Keeps the video within its container */
-    border-radius: 8px; /* Adds some radius to the video */
+    object-fit: contain; 
 }
+
+.non-gps--button-container {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 20px;
+    border: 1px solid red;
+  }
+
 
 /* Ensure the video viewer matches the image viewer height */
 .ass-loc--video-container {
