--- a/src/components/navigation.css
+++ b/src/components/navigation.css
@@ -190,14 +190,14 @@
 
   
   .modal--button {
-    padding: 10px;
+    padding: 8px;
     background-color: var(--sDarkBlue);
     color: white;
     border: none;
     border-radius: 5px;
     cursor: pointer;
     text-align: center;
-    width: 150px;
+    width: 160px;
   }
 
   .modal--textarea {
@@ -323,19 +323,16 @@
 }
 
 .config--container {
-  padding: 20px;
+  padding: 10px;
   border-radius: 8px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  border: 1px solid var(--sDarkBlue)
 }
 
-.config--red-container {
-  border: 2px solid red;
-}
-
-.config--green-container {
-  border: 2px solid green;
+.config--label {
+  margin: 8px 0 2px 0;
 }
 
 .config--button-container {
