--- a/src/components/mapPopup.css
+++ b/src/components/mapPopup.css
@@ -1,4 +1,12 @@
 /* Includes classes for MapPopup and Comments */
+@import url('https://cdn.jsdelivr.net/npm/lightgallery@2.4.0/css/lightgallery.css');
+@import url('https://cdn.jsdelivr.net/npm/lightgallery@2.4.0/css/lg-zoom.css');
+@import url('https://cdn.jsdelivr.net/npm/lightgallery@2.4.0/css/lg-share.css');
+@import url('https://cdn.jsdelivr.net/npm/lightgallery@2.4.0/css/lg-video.css');
+@import url('https://cdn.jsdelivr.net/npm/lightgallery@2.4.0/css/lg-thumbnail.css');
+
+
+
 
 .popup--modal-overlay {
   position: fixed;
@@ -69,112 +77,49 @@
   border: 3px solid var(--SYellow);
 }
 
+
+.popup--fullscreen {
+  width: 100vw;
+  height: 100vh;
+  max-width: 100%;
+  max-height: 100%;
+  border: none;
+  border-radius: 0;
+  padding: 0;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1000; /* Ensure it stays on top */
+}
+
+.popup--modal-content {
+  transition: all 0.3s ease-in-out;
+}
+
+.popup--fill-window-sgv {
+  width: 30px;
+  height: 30px;
+  cursor: pointer;
+  border-radius: 8px;
+  margin: 0 8px;
+}
+
+.fill-window-button-svg {
+  width: 100%;
+  height: 100%;
+}
+
+
+
+
+
 /** IMAGE STYLING - BELOW **/
 
-.image-gallery-image {
-  border: 1px solid green;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 330px; 
-  overflow: hidden;
-}
-
-.image-gallery-image img,
-.image-gallery-image video {
-  max-width: 90%;
-  max-height: 1000%; /* Prevents truncation at the bottom */
-  object-fit: contain;
-}
-
-.image-gallery-slide-wrapper.fullscreen,
-.image-gallery-image.fullscreen {
-  width: 100vw !important;
-  height: 100vh !important;
-  max-width: 100vw !important;
-  max-height: 100vh !important;
-}
-
-.image-gallery-image.fullscreen img,
-.image-gallery-image.fullscreen video {
-  width: 100% !important;
-  height: 100% !important;
-  object-fit: cover; /* Ensures full coverage in fullscreen */
-}
-
-.image--custom-image-gallery img,
-.image--custom-image-gallery {
-  width: auto;
-  height: 90%; /* Matches the height adjustment */
-  max-width: 100%;
-  max-height: 100%;
-  display: block;
-  margin: 0 auto;
-  object-fit: contain;
-}
-
-/* Video container for .mp4 files */
-.popup--video-container {
-  width: 100%;
-  height: 300px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  overflow: hidden;
-}
-
-.popup--video {
-  max-width: 100%;
-  max-height: 100%;
-  object-fit: contain;
-}
-
-@media (max-width: 600px) {
-
-
-        .image--custom-image-gallery img,
-        .image--custom-image-gallery {
-          height: 100%;
-          width: 100%;
-          object-fit: contain;
-        }
-
-        .popup--modal-content {
-          width: 100vw;
-          height: 100%;
-          max-width: 100%;
-          border-radius: 0;
-          padding: 0;
-        }
-
-        .popup--display-container {
-          height: calc(100% - 20px); /* Adjust height to leave room for tabs */
-          overflow-y: auto;
-          border: 1px solid green ;
-        }
-}
 
 
 
-.exit-fullscreen-button {
-  position: fixed; /* Ensure the button stays in the viewport */
-  top: 10px; /* Adjust positioning for better visibility */
-  right: 10px; /* Place it in the top-right corner */
-  z-index: 10000; /* Ensure it's above all other elements */
-  background-color: rgba(0, 0, 0, 0.8);
-  color: white;
-  border: none;
-  border-radius: 4px;
-  padding: 8px 16px;
-  font-size: 14px;
-  cursor: pointer;
-}
 
-.exit-fullscreen-button:hover {
-  background-color: rgba(255, 255, 255, 0.8);
-  color: black;
-}
+
 
 
 /** IMAGE STYLING - ABOVE **/
@@ -228,6 +173,7 @@
   margin-bottom: 1em;
 }
 
+/* AI Generated Content Tab  */
 .ai-gen-container {
   display: flex;
   flex-direction: column;
