--- a/src/components/mapPopup.css
+++ b/src/components/mapPopup.css
@@ -7,7 +7,6 @@
 
 
 
-
 .popup--modal-overlay {
   position: fixed;
   top: 0;
@@ -18,7 +17,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 500; /* Ensure modal is above all other elements */
+  z-index: 1500; /* Ensure modal is above all other elements */
 }
 
 /* main MapBox control */
@@ -32,7 +31,7 @@
   max-width: 85%;
   min-width: 400px;
   transform: translateY(5%);
-  z-index: 600; /* Ensure modal content is above the overlay */
+  z-index: 1600; /* Ensure modal content is above the overlay */
   overflow: hidden;
   display: flex;
   flex-direction: column;
@@ -72,7 +71,7 @@
   justify-content: center;
   align-items: flex-start;
   overflow: hidden;
-  height: 355px;
+  height: 350px;
   box-sizing: border-box;
   border: 3px solid var(--SYellow);
 }
@@ -110,14 +109,45 @@
 }
 
 
+.placeholder {
+  height: 0;
+  width: 600px ;
+  font-size: 0px;
+}
 
+.lg-content {
+  height: 300px;
+}
+
+
+.lg-outer {
+  height: 350px;
+}
+
+.lg-backdrop {
+  background-color: inherit
+}
+
+.lg-prev, .lg-next {
+  background-color: inherit;
+}
+
+.lg-icon {
+  color: black;
+ }
 
 
 /** IMAGE STYLING - BELOW **/
 
+/* Fullscreen LightGallery container */
+.lg-outer.lg-fullscreen {
+  height: 100vh !important;
+}
 
-
-
+.popup--modal-content.popup--fullscreen {
+  width: 100%;
+  height: 100%;
+}
 
 
 
