--- a/src/components/mapPopup.css
+++ b/src/components/mapPopup.css
@@ -23,23 +23,24 @@
 /* main MapBox control */
 .popup--modal-content {
   background: white;
-  padding: 10px 0;
   border-radius: 5px;
   width: 650px;
-  height: 480px;
-  border: 1px solid green;
+  min-height: 700px;
+  border: 5px solid green;
   max-width: 85%;
   min-width: 400px;
   transform: translateY(5%);
-  z-index: 1600; /* Ensure modal content is above the overlay */
+  z-index: 1600;
   overflow: hidden;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  justify-content: space-between  ;
 }
 
 .popup--header-container {
   display: flex;
   justify-content: space-between;
+  width: 100%;
   align-items: center;
   padding: 0 20px;
   border-bottom: 2px solid var(--SYellow);
@@ -61,8 +62,11 @@
   border-radius: 8px;
 }
 
-.popup--next-location-sgv,
-.comments--edit-button {
+.popup--previous-location-sgv {
+ Margin-left: 8px;
+}
+
+.popup--next-location-sgv {
   margin-left: 8px;
 }
 
@@ -71,7 +75,7 @@
   justify-content: center;
   align-items: flex-start;
   overflow: hidden;
-  height: 350px;
+  height: 100%;
   box-sizing: border-box;
   border: 3px solid var(--SYellow);
 }
