--- a/src/components/locationDetails.css
+++ b/src/components/locationDetails.css
@@ -12,6 +12,12 @@
   z-index: 1500;
 }
 
+.popup--warning-message {
+  margin: 20px;
+  line-height: 150%;
+  font-style: normal;
+}
+
 .popup--modal-content {
   background: white;
   border-radius: 5px;
